hphp/test/slow/reified_generics/error-function-call-5.php.expectf
Fatal error: Function C::f requires 2 generics but 1 given in %s on line 4
